--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,6 +1,17 @@
 <footer class="footer">
   <div class="container">
-This is a footer
+    <div class="row">
+      <div class="col-xs-6">
+        <h3><img src="../img/phone.svg"> <strong>(954)-567-1654</strong> </h3>
+      </div>
+      <div class="col-xs-6">
+        <ul class="social-media">
+          <li><img src="../img/facebook.svg"></li>
+          <li><img src="../img/twitter.svg"></li>
+          <li><img src="../img/instagram.svg"></li>
+        </ul>
+      </div>
+    </div>
   </div>
 
 </footer>
