--- a/css/css.css
+++ b/css/css.css
@@ -40,7 +40,10 @@
 *{
   font-family: 'Selawik', Arial, sans-serif;
 }
-
+.bold{
+  font-family:'SelawikBold',Arial, sans-serif;
+  font-weight: 700;
+}
 /* CH03 - Page Structure */
 body {
   height: 100%;
@@ -66,6 +69,7 @@ background-size:contain;
 .p70{
   padding:70px 0;
 }
+
 /* CH04 - Header & Navigation */
 nav{
 background-color:transparent;
@@ -77,7 +81,7 @@ background-color:transparent;
 }
 /* CH05 - Content & Media */
 .banner-container{
-
+  text-align:center;
   position: relative;
 }
 .banner-container img{
@@ -95,19 +99,62 @@ background-color:transparent;
   background-color:#f6f6f6;
   background-repeat:no-repeat;
   background-size:cover;
-  background-position:center bottom
+  background-position:center bottom;
+  -webkit-box-shadow: 0px 0px 26px 10px rgba(0,0,0,0.26);
+-moz-box-shadow: 0px 0px 26px 10px rgba(0,0,0,0.26);
+box-shadow: 0px 0px 26px 10px rgba(0,0,0,0.26);
+}
+.wrapper{
+  position:relative;
 }
 .highlight{
-  height:200px;
+  background-color:##ffffff;
+  background-image: url("../img/waves1.svg");
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:bottom center;
+  top:0;
+min-height:200px;
+padding:25px 25px;
+margin:15px 0;
+  text-align:center;
+  position:relative;
+    border-radius:15px;
+    border:1px solid #9a9a9a;
+}
+.highlight:hover{
+  background-color:#ffffff;
+    top:-10px;
+  border-radius:15px;
+  -webkit-box-shadow: 0px 9px 18px 2px rgba(0,0,0,0.35);
+-moz-box-shadow: 0px 9px 18px 2px rgba(0,0,0,0.35);
+box-shadow: 0px 9px 18px 2px rgba(0,0,0,0.35);
+}
+.highlight img{
+
+  height:150px;
+}
+.showcase p,.about p{
+  font-size:1.5em;
+}
+.header{
+  text-align:center;
+  padding:10px 0 40px;;
 }
 .button-wrapper{
-  margin-left:auto;
+  text-align:center;
+  margin-top:30px;
+}
+.highlight-button-wrapper{
+  text-align:center;
+  margin-top:9em;
 }
 .learn-more{
-  background-color:#E55A81;
-  color:white;
-  font-size:20px;
-  border-bottom:#C53F69;
+  padding: 16px 25px;
+  background-color: #E55A81;
+  color: white;
+  font-size: 20px;
+  border-bottom: #C53F69 4px solid;
 }
   /* CH06 - Footer */
 .footer{
@@ -136,6 +183,22 @@ display:block;
 .footer h3{
   margin-top:10px;
 }
+.about{
+padding:50px 0;
+text-align:center;
+}
+.about .portrait{
+  background-color:#ffffff;
+  border-radius:500px;
+  height:300px;
+  width:300px;
+  padding:10px;
+  margin:0 auto;
+}
+.about h1, p{
+  margin-bottom:40px;
+}
+
 /* CH07 - Miscellaneous */
 
     /*==========  Mobile First Method  ==========*/
