--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,10 +1,13 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-xs-6">
-        <h3><img src="img/phone.svg"> <strong>(954)-567-1654</strong> </h3>
+      <div class="col-sm-3 col-xs-1">
+        <h5><a href="tel:954-567-1654"><img src="img/phone.svg"> <span class="hidden-xs">(954)-567-1654</span> </a></h5>
       </div>
-      <div class="col-xs-6">
+      <div class="col-sm-3 col-xs-1">
+        <h5><a href="mailto:ll4270@aol.com"><img style=""src="img/email.svg"><span class="hidden-xs">ll427@aol.com</span></h5></a>
+      </div>
+      <div class="col-sm-6 col-xs-9">
         <ul class="social-media">
           <li><img src="img/facebook.svg"></li>
           <li><img src="img/twitter.svg"></li>
