--- a/partials/nav.html
+++ b/partials/nav.html
@@ -2,54 +2,24 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed"aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <a draggable="false">
+          <img class="visible-xs"style="height:60px; " src="img/logosmall000.svg" draggable="false"></a>
       </button>
       <a href="#" draggable="false">
-        <img style="height:60px; " id="logo" src="img/logosmall.svg" draggable="false"></a>
+        <img class="hidden-xs"style="height:60px; " id="logo" src="img/logosmall.svg" draggable="false"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse">
-      <!-- <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form> -->
+    <div class="collapse navbar-collapse" uib-collapse="navCollapsed">
+
       <ul class="nav navbar-nav navbar-right">
-        <li><a ui-sref="services">Services</a></li>
-        <li><a ui-sref="pricing">Pricing</a></li>
-        <li><a ui-sref="contact">Contact</a></li>
-        <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li> -->
+        <li class="visible-xs"><a ng-click="navCollapsed = true" ui-sref="home">Home</a></li>
+        <li><a ng-click="navCollapsed = true" ui-sref="services">Services</a></li>
+        <li><a ng-click="navCollapsed = true" ui-sref="faq">FAQ</a></li>
+        <li><a ng-click="navCollapsed = true" ui-sref="contact">Contact</a></li>
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
