--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,13 +1,11 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm-3 col-xs-1">
-        <h5><a href="tel:954-567-1654"><img src="img/phone.svg"> <span class="hidden-xs">(954)-567-1654</span> </a></h5>
+      <div class="col-sm-3 col-xs-5">
+        <a ui-sref="contact"><h4><img class="hidden-xs" src="/img/wordbubble.svg"> Contact Us</h4></a>
       </div>
-      <div class="col-sm-3 col-xs-1">
-        <h5><a href="mailto:ll4270@aol.com"><img style=""src="img/email.svg"><span class="hidden-xs">ll427@aol.com</span></h5></a>
-      </div>
-      <div class="col-sm-6 col-xs-9">
+
+      <div class="col-sm-6 col-xs-7">
         <ul class="social-media">
           <li><img src="img/facebook.svg"></li>
           <li><img src="img/twitter.svg"></li>
