--- a/partials/nav.html
+++ b/partials/nav.html
@@ -2,25 +2,32 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed"aria-expanded="false">
+      <button type="button" ng-click="openNav()"class="navbar-toggle collapsed" ng-init="navCollapsed = true"aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
-        <a draggable="false">
-          <img class="visible-xs"style="height:60px; " src="img/logosmall000.svg" draggable="false"></a>
+        <a draggable="false" ng-click"openNav()">
+          <img class="visible-xs"style="height:60px; " id="button-logo"src="img/logosmall000.svg" draggable="false"></a>
       </button>
       <a href="#" draggable="false">
         <img class="hidden-xs"style="height:60px; " id="logo" src="img/logosmall.svg" draggable="false"></a>
     </div>
-
+    <div id="sidenav" class="sidenav">
+      <div class="sidenav-background animated slideInRight"></div>
+      <div class="sidenav-wrapper">
+      <a href="javascript:void(0)" ng-show="buttonVisible ==true" class="closebtn animated" id="closebtn" ng-click="closeNav()"><img src="img/close.svg"></a>
+    <a class="visible-xs" ui-sref-active="active"ng-click="closeNav()" ui-sref="home">Home</a>
+      <a ng-click="closeNav()" ui-sref-active="active"ui-sref="services">Services</a>
+      <a ng-click="closeNav()" ui-sref-active="active"ui-sref="faq">FAQ</a>
+      <a ng-click="closeNav()" ui-sref-active="active"ui-sref="contact">Contact</a>
+    </div>
+    </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" uib-collapse="navCollapsed">
 
-      <ul class="nav navbar-nav navbar-right">
-        <li class="visible-xs"><a ng-click="navCollapsed = true" ui-sref="home">Home</a></li>
-        <li><a ng-click="navCollapsed = true" ui-sref="services">Services</a></li>
-        <li><a ng-click="navCollapsed = true" ui-sref="faq">FAQ</a></li>
-        <li><a ng-click="navCollapsed = true" ui-sref="contact">Contact</a></li>
+      <ul class="nav navbar-nav navbar-right hidden-xs">
+        <li class="visible-xs"><a ui-sref-active="active"ng-click="navCollapsed = true" ui-sref="home">Home</a></li>
+        <li><a ng-click="navCollapsed = true" ui-sref-active="active"ui-sref="services">Services</a></li>
+        <li><a ng-click="navCollapsed = true" ui-sref-active="active"ui-sref="faq">FAQ</a></li>
+        <li><a ng-click="navCollapsed = true" ui-sref-active="active"ui-sref="contact">Contact</a></li>
 
       </ul>
-    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
