--- a/partials/footer.html
+++ b/partials/footer.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3 col-xs-5">
-        <a ui-sref="contact"><h4><img class="hidden-xs" src="/img/wordbubble.svg"> Contact Us</h4></a>
+        <a ng-href="#contact"><h4><img class="hidden-xs" src="img/wordbubble.svg"> Contact Us</h4></a>
       </div>
 
-      <div class="col-sm-6 col-xs-7">
+      <div class="col-sm-6 col-xs-7 pull-right">
         <ul class="social-media">
           <li><img src="img/facebook.svg"></li>
           <li><img src="img/twitter.svg"></li>
