--- a/partials/nav.html
+++ b/partials/nav.html
@@ -14,19 +14,19 @@
       <div class="sidenav-background animated slideInRight"></div>
       <div class="sidenav-wrapper">
       <a href="javascript:void(0)" ng-show="buttonVisible ==true" class="closebtn animated" id="closebtn" ng-click="closeNav()"><img src="img/close.svg"></a>
-    <a class="visible-xs" ui-sref-active="active"ng-click="closeNav()" ui-sref="home">Home</a>
-      <a ng-click="closeNav()" ui-sref-active="active"ui-sref="services">Services</a>
-      <a ng-click="closeNav()" ui-sref-active="active"ui-sref="faq">FAQ</a>
-      <a ng-click="closeNav()" ui-sref-active="active"ui-sref="contact">Contact</a>
+    <a class="visible-xs" ng-href-active="active"ng-click="closeNav()" ng-href="#home">Home</a>
+      <a ng-click="closeNav()" ng-href-active="active"ng-href="#services">Services</a>
+      <a ng-click="closeNav()" ng-href-active="active"ng-href="#faq">FAQ</a>
+      <a ng-click="closeNav()" ng-href-active="active"ng-href="#contact">Contact</a>
     </div>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
 
       <ul class="nav navbar-nav navbar-right hidden-xs">
-        <li class="visible-xs"><a ui-sref-active="active"ng-click="navCollapsed = true" ui-sref="home">Home</a></li>
-        <li><a ng-click="navCollapsed = true" ui-sref-active="active"ui-sref="services">Services</a></li>
-        <li><a ng-click="navCollapsed = true" ui-sref-active="active"ui-sref="faq">FAQ</a></li>
-        <li><a ng-click="navCollapsed = true" ui-sref-active="active"ui-sref="contact">Contact</a></li>
+        <li class="visible-xs"><a ng-href-active="active"ng-click="navCollapsed = true" ng-href="#home">Home</a></li>
+        <li><a ng-click="navCollapsed = true" ng-href-active="active"ng-href="#services">Services</a></li>
+        <li><a ng-click="navCollapsed = true" ng-href-active="active"ng-href="#faq">FAQ</a></li>
+        <li><a ng-click="navCollapsed = true" ng-href-active="active"ng-href="#contact">Contact</a></li>
 
       </ul>
   </div><!-- /.container-fluid -->
