--- a/partials/footer.html
+++ b/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3 col-xs-5">
-        <a ng-href="#contact"><h4><img class="hidden-xs" src="img/wordbubble.svg"> Contact Us</h4></a>
+        <a href="contact"><h4><img  src="img/wordbubble.svg"> <span class="hidden-xs">Contact Us</span></h4></a>
       </div>
 
       <div class="col-sm-6 col-xs-7 pull-right">
